--- a/front-end/styles.css
+++ b/front-end/styles.css
@@ -44,6 +44,17 @@ html {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
 }
 
+#map2-container {
+  display: flex;
+  width: 100%;
+  max-width: 1300px;
+  height: 60vh; /* Set a fixed height for the map container */
+  border: 1px solid black;
+  border-radius: 15px; /* Rounded corners */
+  overflow: hidden; /* Ensures that child elements (map and details) conform to the container's rounded corners */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
+}
+
 #map,
 #details-area {
   border-radius: 15px; /* Applies rounded corners to ensure consistency within the container */
@@ -51,6 +62,12 @@ html {
 
 #map {
   width: 70%;
+  height: 100%; /* Fixed height for the map */
+  border-right: 1px solid #ddd; /* Adds a subtle separator between the map and the details area */
+  border-radius: 15px 0 0 15px; /* Rounded corners on the left side only */
+}
+#map2 {
+  width: 100%;
   height: 100%; /* Fixed height for the map */
   border-right: 1px solid #ddd; /* Adds a subtle separator between the map and the details area */
   border-radius: 15px 0 0 15px; /* Rounded corners on the left side only */
