--- a/front-end/styles.css
+++ b/front-end/styles.css
@@ -47,9 +47,9 @@ html {
 #map2-container {
   display: flex;
   width: 100%;
-  max-width: 1300px;
-  height: 60vh; /* Set a fixed height for the map container */
-  border: 1px solid black;
+  max-width: 1500px;
+  height: 70vh; /* Set a fixed height for the map container */
+
   border-radius: 15px; /* Rounded corners */
   overflow: hidden; /* Ensures that child elements (map and details) conform to the container's rounded corners */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
@@ -63,13 +63,13 @@ html {
 #map {
   width: 70%;
   height: 100%; /* Fixed height for the map */
-  border-right: 1px solid #ddd; /* Adds a subtle separator between the map and the details area */
+  border-right: 1px solid #000; /* Adds a subtle separator between the map and the details area */
   border-radius: 15px 0 0 15px; /* Rounded corners on the left side only */
 }
 #map2 {
   width: 100%;
   height: 100%; /* Fixed height for the map */
-  border-right: 1px solid #ddd; /* Adds a subtle separator between the map and the details area */
+  border-right: 1px solid #000; /* Adds a subtle separator between the map and the details area */
   border-radius: 15px 0 0 15px; /* Rounded corners on the left side only */
 }
 
@@ -81,10 +81,6 @@ html {
   background-color: #212121; /* Matching the main background color for consistency */
   color: #fff; /* White text for contrast */
   border-radius: 0 15px 15px 0; /* Rounded corners on the right side only */
-}
-
-#performance-info {
-  padding: 10px;
 }
 
 ul {
@@ -111,6 +107,7 @@ ul li a:focus {
 
 #performances-on {
   font-style: italic;
+  font-size: x-large;
 }
 
 /* Close button for the details-area */
@@ -163,16 +160,64 @@ ul li a:focus {
 }
 
 .info.legend {
-  padding: 6px 8px;
-  font: 14px/16px Arial, Helvetica, sans-serif;
+  padding: 6px 10px;
+  font: 14px Arial, sans-serif;
   background: rgba(255, 255, 255, 0.8);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
+  color: #333;
 }
+
+.info.legend strong {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.legend-item {
+  line-height: 18px;
+  margin-bottom: 4px;
+}
+
 .info.legend i {
-  width: 14px;
-  height: 14px;
+  width: 18px;
+  height: 18px;
   float: left;
   margin-right: 8px;
-  opacity: 0.7;
+}
+.performance-list {
+  list-style-type: none; /* Removes default list styling */
+  padding-left: 20px; /* Adequate padding for custom bullet points */
+}
+ul.performance-list {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.performance-item {
+  background: #333;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 10px;
+  transition: background-color 0.5s ease;
+}
+
+.performance-item:hover {
+  background-color: #3a3a3a; /* Darken item on hover */
+}
+
+.performance-title-link {
+  text-decoration: none;
+  color: #ffddd2;
+  transition: color 0.3s ease;
+}
+
+.performance-title-link:hover,
+.performance-title-link:focus {
+  text-decoration: underline;
+  color: #e29578;
+} /* Changes color on hover */
+
+.composer-name {
+  font-weight: 300;
+  font-style: italic;
 }
