--- a/front-end/styles.css
+++ b/front-end/styles.css
@@ -3,7 +3,7 @@ html {
   height: 100%;
   margin: 0;
   font-family: "Roboto", sans-serif;
-  background-color: #282929; /* A soothing light background */
+  background-color: #ECEBE4; /* A soothing light background */
 }
 
 #main-container {
@@ -11,9 +11,15 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 40px); /* Adjusted for top and bottom content padding */
+  height: calc(150vh - 40px); /* Adjusted for top and bottom content padding */
   padding: 20px;
   gap: 20px;
+}
+
+#header-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #top-content {
@@ -36,8 +42,9 @@ html {
 #map-container {
   display: flex;
   width: 100%;
-  max-width: 1500px;
-  height: 70vh; /* Set a fixed height for the map container */
+  max-width: 1000px;
+  height: 100%; /* Set a fixed height for the map container */
+  max-height: 600px;
 
   border-radius: 15px; /* Rounded corners */
   overflow: hidden; /* Ensures that child elements (map and details) conform to the container's rounded corners */
@@ -47,8 +54,9 @@ html {
 #map2-container {
   display: flex;
   width: 100%;
-  max-width: 1500px;
-  height: 70vh; /* Set a fixed height for the map container */
+  max-width: 1000px;
+  height: 100%; /* Set a fixed height for the map container */
+  max-height: 900px;
 
   border-radius: 15px; /* Rounded corners */
   overflow: hidden; /* Ensures that child elements (map and details) conform to the container's rounded corners */
@@ -220,4 +228,22 @@ ul.performance-list {
 .composer-name {
   font-weight: 300;
   font-style: italic;
+}
+
+.lottie-animation {
+  width: 150px; /* adjust as needed */
+  height: 150px; /* adjust as needed */
+  max-width: 100%; /* limit the width of the animations */
+  max-height: 100%; /* limit the height of the animations */
+}
+
+h1 {
+  font-size: 60px; /* adjust as needed */
+  color: #ffffff; /* adjust as needed */
+  font-weight: bold; /* adjust as needed */
+  text-align: center; /* centers the text */
+  text-transform: uppercase; /* makes the text uppercase */
+  letter-spacing: 2px; /* increases the space between letters */
+  font-family: 'Roboto', sans-serif; /* changes the font */
+  text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black; /* adds a 2px black outline */
 }
